fix: remove emsdk submodule and add proper GitHub Actions setup
- Remove emsdk from git tracking (was incorrectly added as submodule)
- Add emsdk/ to .gitignore to prevent tracking
- Add Emscripten setup step to build-nim workflow
- Add submodules: false to all checkout actions to prevent submodule errors
- This fixes the 'No url found for submodule path emsdk' error in GitHub Actions

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ web/backstorie.wasm
 web/backstorie.wasm.js
 web/backstorie.wasm.wasm
 
+# Emscripten SDK (local installation)
+emsdk/
+
 # OS files
 .DS_Store
 Thumbs.db
