--- a/.github/workflows/build-nim.yml
+++ b/.github/workflows/build-nim.yml
@@ -23,11 +23,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          submodules: false
       
       - name: Set up Nim
         uses: jiro4989/setup-nim-action@v2
         with:
           nim-version: 'stable'
+      
+      - name: Set up Emscripten
+        uses: mymindstorm/setup-emsdk@v14
+        with:
+          version: 'latest'
       
       - name: Make build scripts executable
         run: |
