--- a/.github/workflows/sync-template.yml
+++ b/.github/workflows/sync-template.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
+          submodules: false
 
       - name: Detect if this is a template-derived repo
         id: detect
